--- a/frontend/src/app/components/restaurant-menu-components/menu-category-item/menu-category-item.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/menu-category-item/menu-category-item.component.css
@@ -1,6 +1,7 @@
 .category-button {
     width: auto;
     height: 100%;
+    min-width: 80px;
     padding: 10px;
     margin: 5px;
     background-color: white;
@@ -8,16 +9,18 @@
     font-size: 18px;
     cursor: pointer;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     border-radius: 20px;
     z-index: auto;
     border: 1px solid #b4b2b2;
+    overflow-x: auto;
+    text-align: center;
 
 }
 
 .category-button:hover {
-    background-color: #b4b2b2;
+    background-color: #f5a04f;
 }
 
 .category-button.selected {
