Fixed view od restaurants

--- a/frontend/src/app/components/resturants-components/restaurant/restaurant.component.css
+++ b/frontend/src/app/components/resturants-components/restaurant/restaurant.component.css
@@ -13,7 +13,7 @@
 .main-container{
   display: flex;
   flex-direction: row;
-  width: 1300px;
+  width: 1400px;
   height: 100%;
   margin-top: 50px;
 }
@@ -35,13 +35,18 @@
 .second-section {
   display: flex;
   flex-direction: column;
-  width: 78%;
-  height: 100%;
+  width: 100%;
+  height: auto;
+  overflow-y: auto;
+}
+
+.second-section::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
 }
 
 .search-input {
   border: 1px solid #a29f9f;
-  width: 800px;
+  width: 980px;
   height: 60px;
   outline: none;
   padding: 0 20px;
@@ -49,13 +54,15 @@
   border-radius: 40px 40px 40px 40px;
   position: relative;
   background: white;
+  margin-left: 20px;
+
 }
 
 h3 {
   font-size: 25px;
   font-weight: bold;
   margin-top: 30px;
-  margin-left: 15px;
+  margin-left: 35px;
   margin-bottom: -10px;
 }
 
@@ -65,7 +72,7 @@ h3 {
   flex-wrap: wrap;
   margin-top: 20px;
   width: 100%;
-  height: 100%;
-
+  height: auto;
+  margin-bottom: 230px;
 }
 
