--- a/frontend/src/app/components/resturants-components/restaurant-item/restaurant-item.component.css
+++ b/frontend/src/app/components/resturants-components/restaurant-item/restaurant-item.component.css
@@ -2,10 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 450px;
-  height: 280px;
-  margin-top: 20px;
-  margin-right: 50px;
+  width: 500px;
+  height: 310px;
+  margin: 20px 20px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   cursor: pointer;
