--- a/frontend/src/app/components/home-components/home-first-section/home-first-section.component.html
+++ b/frontend/src/app/components/home-components/home-first-section/home-first-section.component.html
@@ -4,7 +4,7 @@
             <h1>{{getTranslation('home1')}}</h1>
             <h2> {{getTranslation('home2')}}</h2>
             <div class="search-bar">
-                <input class="search-input" type="text" [(ngModel)]="searchAddress" placeholder="{{getTranslation('address')}}">
+                <input class="search-input" type="text" [(ngModel)]="searchAddress" (keydown)="onKeydown($event)" placeholder="{{getTranslation('address')}}">
                 <button (click)="searchRestaurants()">{{getTranslation('search')}}</button>
             </div>
         </div>
