--- a/frontend/src/app/components/home-components/home-first-section/home-first-section.component.html
+++ b/frontend/src/app/components/home-components/home-first-section/home-first-section.component.html
@@ -4,8 +4,31 @@
             <h1>{{getTranslation('home1')}}</h1>
             <h2> {{getTranslation('home2')}}</h2>
             <div class="search-bar">
-                <input class="search-input" type="text" [(ngModel)]="searchAddress" (keydown)="onKeydown($event)" placeholder="{{getTranslation('address')}}">
+                <input class="search-input"
+                       type="text"
+                       [(ngModel)]="searchAddress"
+                       (input)="onInputChange(searchAddress)"
+                       (keydown)="onKeydown($event)"
+                       placeholder="{{getTranslation('address')}}">
                 <button (click)="searchRestaurants()">{{getTranslation('search')}}</button>
             </div>
+          <div class="suggestions-container" *ngIf="suggestions.length > 0">
+            <div
+              class="suggestion-card"
+              *ngFor="let suggestion of suggestions"
+              (click)="selectSuggestion(suggestion.name)"
+            >
+              <div class="suggestion-icon">
+                <i class="fa fa-map-marker-alt"></i>
+              </div>
+              <div class="suggestion-details">
+                <p class="suggestion-name">{{ suggestion.name }}</p>
+              </div>
+              <div class="suggestion-action">
+                <button>{{getTranslation('choose')}}</button>
+              </div>
+            </div>
+          </div>
+
         </div>
     </div>
