--- a/frontend/src/app/components/menu-components/menu-login/menu-login.component.html
+++ b/frontend/src/app/components/menu-components/menu-login/menu-login.component.html
@@ -31,6 +31,11 @@
       <label for="twoFactorCode">{{getTranslation('twoFactorCode')}}</label>
       <input id="twoFactorCode" type="text" [(ngModel)]="twoFactorCode" name="twoFactorCode" placeholder="{{getTranslation('twoFactorCode')}}" required>
     </div>
+    <div class="error-container" *ngIf="isLoginError">
+      <i class="fa-solid fa-circle-exclamation"></i>
+      <p> {{ getTranslation('error2FA') }} </p>
+    </div>
+
     <button (click)="verify2FA(twoFactorCode)">{{getTranslation('login')}}</button>
   </form>
 
