--- a/frontend/src/app/components/nav/navbar/navbar.component.css
+++ b/frontend/src/app/components/nav/navbar/navbar.component.css
@@ -74,7 +74,7 @@
   flex-direction: row;
   width: auto;
   height: 17px;
-  padding: 8px;
+  padding: 8px 15px;
   background: #f1f1f1  ;
   border-radius: 20px;
   margin-right: 20px;
