--- a/frontend/src/app/components/resturants-components/restaurant/restaurant.component.css
+++ b/frontend/src/app/components/resturants-components/restaurant/restaurant.component.css
@@ -6,7 +6,7 @@
   height: 100%;
   width: 100%;
   overflow-y: hidden;
-  font-family: "Arial", sans-serif;
+  font-family: "Roboto", sans-serif;
   background: whitesmoke;
 }
 
