--- a/frontend/src/app/components/resturants-components/category-item/category-item.component.css
+++ b/frontend/src/app/components/resturants-components/category-item/category-item.component.css
@@ -1,3 +1,11 @@
+.category-item {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 120px;
+  height: 100%;
+}
+
 .category-image {
   width: 90%;
   height: 60%;
