--- a/frontend/src/app/components/resturants-components/category-item/category-item.component.html
+++ b/frontend/src/app/components/resturants-components/category-item/category-item.component.html
@@ -1,2 +1,4 @@
+<div class="category-item">
   <img *ngIf="photo" [src]="photo" alt="{{name}}" class="category-image"/>
   <h3>{{name}}</h3>
+</div>
