Added maps with restaurants punkts

--- a/frontend/src/app/components/resturants-components/restaurant-sort/restaurant-sort.component.html
+++ b/frontend/src/app/components/resturants-components/restaurant-sort/restaurant-sort.component.html
@@ -9,7 +9,7 @@
   ></app-sort-item>
 
 <div class="maps-container">
-  <button class="maps-button">
+  <button class="maps-button" (click)="toggleMapView()">
     <i class="fa-solid fa-location-crosshairs"></i>
     <h4> {{getTranslation('seeMap')}} </h4>
   </button>
