--- a/frontend/src/app/components/resturants-components/restaurant-sort/restaurant-sort.component.css
+++ b/frontend/src/app/components/resturants-components/restaurant-sort/restaurant-sort.component.css
@@ -24,7 +24,7 @@
   cursor: pointer;
   display: flex;
   flex-direction: row;
-  background: lightgray;
+  background: linear-gradient(365deg, whitesmoke,  #ffc98f, orange);
   align-items: center;
   justify-content: center;
   border: none;
