fixed view bug in category, added map changes of searchedRestaurants, added distance pipe

--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -54,7 +54,7 @@
   </div>
 
   <ng-container *ngIf="currentRoute === '/restaurants'">
-    <app-resturant-category [selectedOption]="selectedOption"></app-resturant-category>
+    <app-restaurant-category [selectedOption]="selectedOption"></app-restaurant-category>
   </ng-container>
 
 </div>
