--- a/frontend/src/app/components/resturants-components/restaurant-category/restaurant-category.component.css
+++ b/frontend/src/app/components/resturants-components/restaurant-category/restaurant-category.component.css
@@ -12,8 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
-  max-width: 1120px;
+  width: 1200px;
 }
 
 .category-container {
@@ -21,6 +20,7 @@
   align-items: center;
   flex-direction: row;
   width: 95%;
+  max-width: 1120px;
   height: auto;
   overflow-y: hidden;
   overflow-x: auto;
