--- a/frontend/src/app/components/restaurant-menu-components/info-map/info-map.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/info-map/info-map.component.css
@@ -1,10 +1,9 @@
 .map-container {
-  margin-top: 10px;
-  width: 1140px;
-  height: 80vh;
-  border-radius: 8px;
+  width: 100%;
+  height: 260px;
   overflow: hidden;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  margin-bottom: 20px;
 
   #map {
     width: 100%;
@@ -15,8 +14,8 @@
 :host ::ng-deep {
   .restaurant-popup {
     padding: 10px;
-    display: flex;
-    width: 500px;
+    width: 450px;
+    max-width: 450px;
 
     h3 {
       margin: 0 0 10px 0;
@@ -28,7 +27,7 @@
     .popup-details {
       p {
         margin: 5px 0;
-        font-size: 20px;
+        font-size: 18px;
         color: #666;
 
         strong {
