--- a/frontend/src/app/components/restaurant-menu-components/info/info.component.css
+++ b/frontend/src/app/components/restaurant-menu-components/info/info.component.css
@@ -1,6 +1,13 @@
 .info-container {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  height: auto;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
   width: 80%;
   height: auto;
   margin: 20px auto;
