Added refresh after opinion added

--- a/frontend/src/app/components/user-orders-components/order-home/order-home.component.css
+++ b/frontend/src/app/components/user-orders-components/order-home/order-home.component.css
@@ -55,6 +55,15 @@
   font-size: 22px;
 }
 
+.spinner {
+  display: flex;
+  height: 200px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+
+}
+
 .order-item {
   width: 70%;
   margin: auto;
