--- a/frontend/src/app/components/user-orders-components/order-home/order-home.component.html
+++ b/frontend/src/app/components/user-orders-components/order-home/order-home.component.html
@@ -5,11 +5,18 @@
     <div class="text">
       <h2>{{getTranslation('orders')}}</h2>
     </div>
+
+    <div class="spinner" >
+      <mat-spinner *ngIf="isLoading"></mat-spinner>
+    </div>
+
     <app-order-item
       class="order-item"
       *ngFor="let order of orders"
-      [order]="order" >
+      [order]="order"
+      (opinionAdded)="getUserOrders()">
     </app-order-item>
+
   </div>
 
 </div>
