--- a/frontend/src/app/components/menu-components/menu-register/menu-register.component.html
+++ b/frontend/src/app/components/menu-components/menu-register/menu-register.component.html
@@ -45,8 +45,20 @@
       <div class="terms-container">
         <p> {{getTranslation('registerAccept')}}</p>
       </div>
+
+      <div class="separator">
+        <div class="line"></div>
+        <span>{{getTranslation('or')}}</span>
+        <div class="line"></div>
+      </div>
+
+      <button class="googleButton" (click)="loginWithGoogle()">
+        <img class="social-logo" src="https://fonts.gstatic.com/s/i/productlogos/googleg/v6/24px.svg" alt="Logo Google"> {{ getTranslation('loginWithGoogle') }}
+      </button>
+
       <div class="last-container">
-        <h2 (click)="goToLoginDialog()"> {{getTranslation('haveAccount')}}</h2>
+        <p>{{getTranslation('haveAccount')}}</p>
+        <h2 (click)="goToLoginDialog()"> {{getTranslation('login')}}</h2>
       </div>
     </form>
   </div>
