--- a/frontend/src/app/components/menu-components/menu-add-address/menu-add-address.component.css
+++ b/frontend/src/app/components/menu-components/menu-add-address/menu-add-address.component.css
@@ -144,6 +144,20 @@ button:hover {
 }
 
 
+.error-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  width: 90%;
+  height: auto;
+  color: red;
+}
+
+.error-container p {
+  font-size: 14px;
+  margin-left: 10px;
+}
 
 
 
