--- a/frontend/src/app/components/user-orders-components/order-home/order-home.component.css
+++ b/frontend/src/app/components/user-orders-components/order-home/order-home.component.css
@@ -1,7 +1,6 @@
 .main {
   display: flex;
   justify-content: center;
-  align-items: center;
   height: auto;
   background-color: #f5f5f5;
   overflow: hidden;
@@ -18,13 +17,14 @@
 
 .container {
   width: 1000px;
-  min-height: 500px;
+  min-height: 580px;
   max-height: 85%;
   height: auto;
   border-radius: 30px;
   background-color: rgba(255, 255, 255, 0.8);
   position: absolute;
   display: flex;
+  margin-top: 10px;
   margin-bottom: 10vh;
   flex-direction: column;
   overflow-y: auto;
