--- a/frontend/src/app/components/user-orders-components/order-home/order-home.component.html
+++ b/frontend/src/app/components/user-orders-components/order-home/order-home.component.html
@@ -6,8 +6,8 @@
       <h2>{{getTranslation('orders')}}</h2>
     </div>
 
-    <div class="spinner" >
-      <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <div class="spinner" *ngIf="isLoading">
+      <mat-spinner ></mat-spinner>
     </div>
 
     <app-order-item
