--- a/frontend/src/app/components/home-components/home-first-section/home-first-section.component.html
+++ b/frontend/src/app/components/home-components/home-first-section/home-first-section.component.html
@@ -6,6 +6,7 @@
             <div class="search-bar">
                 <input class="search-input"
                        type="text"
+                       (click)="onInputChange(searchAddress)"
                        [(ngModel)]="searchAddress"
                        (input)="onInputChange(searchAddress)"
                        (keydown)="onKeydown($event)"
