--- a/frontend/src/app/components/restaurant-menu-components/additives-dialog/additives-dialog.component.html
+++ b/frontend/src/app/components/restaurant-menu-components/additives-dialog/additives-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="additive-container">
 
   <div class="menu">
-      <img class="image" [src]="data.orderMenu.menu.image" alt="additive image" />
+      <img class="image" [src]="data.orderMenu.menu.image" alt="" />
       <div class="name">
         <h5>{{data.orderMenu.menu.name}}</h5>
         <p *ngIf="data.orderMenu.menu.ingredients">{{data.orderMenu.menu.ingredients}}</p>
