--- a/frontend/src/app/components/nav/navbar/navbar.component.html
+++ b/frontend/src/app/components/nav/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <div class="nav-container">
   <div class="nav-main">
     <div class="left-container">
-      <ng-container *ngIf="currentRoute === '/restaurants' || currentRoute === '/orders-history' || currentRoute === '/payment-confirmation' || currentRoute === '/order-monitoring' || currentRoute === '/add-restaurant'">
+      <ng-container *ngIf="currentRoute === '/restaurants' || currentRoute === '/orders-history' || currentRoute === '/payment-confirmation' || currentRoute === '/order-monitoring' || currentRoute === '/add-restaurant' || currentRoute === '/all-restaurants'">
         <i  class="fa-solid fa-angle-left" (click)="goToHome()"></i>
       </ng-container>
       <ng-container *ngIf="isMenuRoute()">
