--- a/frontend/src/app/components/menu-components/menu/menu.component.html
+++ b/frontend/src/app/components/menu-components/menu/menu.component.html
@@ -12,11 +12,15 @@
     <button class="login-button" (click)="openLoginDialog()"> {{getTranslation('login')}}  </button>
   </div>
 
-  <div class="menu-item" *ngIf="authService.isAuthenticated()" (click)="goToOrderMonitor()">
+  <div class="menu-item" *ngIf="authService.isAuthenticated() && role === 'admin'" (click)="goToOrderMonitor()">
     <i class="fa-solid fa-user"></i>
     <h3>{{getTranslation('orderMonitoring')}}</h3>
   </div>
-  <div class="menu-item" *ngIf="authService.isAuthenticated()" (click)="goToAddRestaurant()">
+  <div class="menu-item" *ngIf="authService.isAuthenticated() && role === 'admin'" (click)="goToRestaurants()">
+    <i class="fa-solid fa-user"></i>
+    <h3>{{getTranslation('availableRestaurants')}}</h3>
+  </div>
+  <div class="menu-item" *ngIf="authService.isAuthenticated() && role === 'admin'" (click)="goToAddRestaurant()">
     <i class="fa-solid fa-user"></i>
     <h3>{{getTranslation('addRestaurant')}}</h3>
   </div>
@@ -41,10 +45,6 @@
   <div class="menu-item" *ngIf="showLanguageOption" (click)="openLanguageDialog()">
     <i class="fa-solid fa-language"></i>
     <h3>{{getTranslation('changeLanguage')}}</h3>
-  </div>
-  <div class="menu-item">
-    <i class="fa-solid fa-circle-question"></i>
-    <h3>{{getTranslation('help')}}</h3>
   </div>
   <div class="menu-item" *ngIf="authService.isAuthenticated()" (click)="logout()">
     <i class="fa-solid fa-sign-out"></i>
