--- a/frontend/src/app/components/menu-components/menu-login/menu-login.component.html
+++ b/frontend/src/app/components/menu-components/menu-login/menu-login.component.html
@@ -51,7 +51,7 @@
 
 
   <div class="last-container">
-    <p> Nie masz konta?</p>
+    <p> {{getTranslation('dontHaveAccount')}}</p>
     <h2 (click)="goToRegisterDialog()"> {{getTranslation('createNow')}}</h2>
   </div>
 </div>
