--- a/frontend/src/app/components/admin-components/all-restaurants/all-restaurants-home/all-restaurants-home.component.css
+++ b/frontend/src/app/components/admin-components/all-restaurants/all-restaurants-home/all-restaurants-home.component.css
@@ -108,3 +108,13 @@
   border-radius: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
+.search-input {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  width: 100%;
+  max-width: 500px;
+  margin: 10px;
+}
